--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,2 +1,15 @@
-Flask==2.3.3
-gunicorn==21.2.0
+fastapi==0.104.1
+uvicorn==0.24.0
+pydantic==2.5.0
+pydantic-settings==2.1.0
+httpx==0.25.2
+openai>=1.6.1
+python-multipart==0.0.6
+jinja2==3.1.2
+aiofiles==23.2.1
+python-dotenv==1.0.0
+redis==5.0.1
+celery==5.3.4
+langchain==0.0.350
+langchain-openai==0.0.2
+pytz==2023.3
