feat: 백엔드 v3.0.0 업데이트 및 ConfigMap 설정
- 백엔드 코드 보안 강화 및 최적화 완료
- ConfigMap으로 환경변수 중앙 관리
- GitHub Container Registry 이미지 경로 설정
- NodePort 30082로 외부 접근 설정
- 리소스 제한 및 헬스체크 개선

--- a/manifests/backend/deployment.yaml
+++ b/manifests/backend/deployment.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: backend
-        image: harbor.local/backend:v3.0.0
+        image: ghcr.io/cloud-linuxer/backend:3.0.0
         ports:
         - containerPort: 8080
         envFrom:
