--- a/manifests/backend/deployment.yaml
+++ b/manifests/backend/deployment.yaml
@@ -4,7 +4,7 @@ metadata:
   name: backend
   labels:
     app: backend
-    version: "3.0.0"
+    version: "3.0.1"
 spec:
   replicas: 2
   selector:
@@ -14,11 +14,13 @@ spec:
     metadata:
       labels:
         app: backend
-        version: "3.0.0"
+        version: "3.0.1"
     spec:
+      imagePullSecrets:
+      - name: ghcr-secret
       containers:
       - name: backend
-        image: ghcr.io/cloud-linuxer/backend:3.0.0
+        image: ghcr.io/cloud-linuxer/backend:latest
         ports:
         - containerPort: 8080
         envFrom:
