feat: GitHub Actions 멀티플랫폼 빌드 지원 추가
- AMD64/ARM64 멀티플랫폼 Docker 이미지 빌드
- 각 플랫폼별 개별 태그 생성 (예: 3.0.1-amd64)
- k3s 클러스터용 AMD64 태그 명시적 사용
- provenance=false로 이미지 호환성 향상

--- a/manifests/backend/deployment.yaml
+++ b/manifests/backend/deployment.yaml
@@ -20,7 +20,7 @@ spec:
       - name: ghcr-secret
       containers:
       - name: backend
-        image: ghcr.io/cloud-linuxer/backend:latest
+        image: ghcr.io/cloud-linuxer/backend:3.0.1-amd64
         ports:
         - containerPort: 8080
         envFrom:
