--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -31,9 +31,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Docker Buildx (host network)
+      - name: Set up Docker Buildx (multiplatform)
         uses: docker/setup-buildx-action@v3
         with:
+          platforms: linux/amd64,linux/arm64
           driver-opts: |
             network=host
 
@@ -41,9 +42,12 @@ jobs:
         uses: docker/build-push-action@v5
         with:
           context: ./backend
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: |
             ${{ steps.prep.outputs.image }}:${{ steps.version.outputs.version }}
+            ${{ steps.prep.outputs.image }}:${{ steps.version.outputs.version }}-amd64
             ${{ steps.prep.outputs.image }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
+          provenance: false
