--- a/.github/workflows/backend-build.yml
+++ b/.github/workflows/backend-build.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   build:
-    runs-on: self-hosted
+    runs-on: ubuntu-latest
     permissions:
       contents: read
       packages: write
@@ -31,14 +31,10 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Set up Docker Buildx (multiplatform)
+      - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
-        with:
-          platforms: linux/amd64,linux/arm64
-          driver-opts: |
-            network=host
 
-      - name: Build and push (GHCR)
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./backend
@@ -50,4 +46,9 @@ jobs:
             ${{ steps.prep.outputs.image }}:latest
           cache-from: type=gha
           cache-to: type=gha,mode=max
-          provenance: false
+
+      - name: Verify image push
+        run: |
+          echo "Verifying image was pushed successfully..."
+          docker run --rm gcr.io/go-containerregistry/crane:debug \
+            manifest ${{ steps.prep.outputs.image }}:${{ steps.version.outputs.version }} || echo "Failed to verify image"
