--- a/applications/sample-app.yaml
+++ b/applications/sample-app.yaml
@@ -1,18 +1,18 @@
-apiVersion: argoproj.io/v1alpha1
-kind: Application
-metadata:
-  name: sample-app
-  namespace: argocd
-spec:
-  project: default
-  source:
-    repoURL: https://github.com/Cloud-Linuxer/argocd-apps.git
-    targetRevision: HEAD
-    path: manifests/sample-app
-  destination:
-    server: https://kubernetes.default.svc
-    namespace: default
-  syncPolicy:
-    automated:
-      prune: true
-      selfHeal: true
+# apiVersion: argoproj.io/v1alpha1
+# kind: Application
+# metadata:
+#   name: sample-app
+#   namespace: argocd
+# spec:
+#   project: default
+#   source:
+#     repoURL: https://github.com/Cloud-Linuxer/argocd-apps.git
+#     targetRevision: HEAD
+#     path: manifests/sample-app
+#   destination:
+#     server: https://kubernetes.default.svc
+#     namespace: default
+#   syncPolicy:
+#     automated:
+#       prune: true
+#       selfHeal: true
