--- a/manifests/backend/configmap.yaml
+++ b/manifests/backend/configmap.yaml
@@ -11,7 +11,7 @@ data:
   LOG_LEVEL: "INFO"
   
   # VLLM 설정 (k3s 클러스터 내 VLLM 서비스)
-  VLLM_BASE_URL: "http://192.168.0.2:30081"
+  VLLM_BASE_URL: "http://vllm-service:8000"
   VLLM_MODEL: "openai/gpt-oss-20b"
   VLLM_MAX_TOKENS: "1000"
   VLLM_TEMPERATURE: "0.7"
