gpt-oss 모델 전용 채팅 API 추가 및 README 업데이트, vllm 이미지 버전 변경

--- a/manifests/vllm-20b/deployment.yaml
+++ b/manifests/vllm-20b/deployment.yaml
@@ -13,10 +13,11 @@ spec:
       hostIPC: true                # docker --ipc=host 대응
       containers:
         - name: vllm
-          image: vllm/vllm-openai:latest
+          image: vllm/vllm-openai:v0.10.1-gptoss
           args:
             - --model
             - openai/gpt-oss-20b
+            - --enable-harmony
             - --max-model-len
             - "12090"
             - --dtype
