--- a/manifests/vllm-20b/deployment.yaml
+++ b/manifests/vllm-20b/deployment.yaml
@@ -13,11 +13,10 @@ spec:
       hostIPC: true                # docker --ipc=host 대응
       containers:
         - name: vllm
-          image: vllm/vllm-openai:v0.10.1-gptoss
+          image: vllm/vllm-openai:gptoss
           args:
             - --model
             - openai/gpt-oss-20b
-            - --enable-harmony
             - --max-model-len
             - "12090"
             - --dtype
