vllm-20b 배포 설정에 VLLM_ATTENTION_BACKEND 및 USE_FSDP 환경 변수 추가

--- a/manifests/vllm-20b/deployment.yaml
+++ b/manifests/vllm-20b/deployment.yaml
@@ -32,6 +32,10 @@ spec:
               value: "SYS"         # 1GPU, NVLink 없음
             - name: VLLM_LOGGING_LEVEL
               value: "INFO"
+            - name: VLLM_ATTENTION_BACKEND
+              value: FLASHINFERENCE
+            - name: USE_FSDP
+              value: "true"
           volumeMounts:
             - name: hf-cache
               mountPath: /root/.cache/huggingface
