--- a/manifests/vllm-20b/deployment.yaml
+++ b/manifests/vllm-20b/deployment.yaml
@@ -2,7 +2,6 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: vllm-gpt-oss-20b
-  labels: { app: vllm }
 spec:
   replicas: 1
   selector: { matchLabels: { app: vllm } }
@@ -11,9 +10,32 @@ spec:
     spec:
       runtimeClassName: nvidia
       hostIPC: true
+      # 1) vLLM 최신 휠을 받아서 오버레이에 설치하는 initContainer
+      initContainers:
+        - name: wheel-fetcher
+          image: vllm/vllm-openai:gptoss   # 메인 컨테이너와 동일 이미지(파이썬/쿠다 호환 보장)
+          command: ["/bin/bash","-lc"]
+          args:
+            - |
+              set -euo pipefail
+              python -V
+              pip -V
+              # 오버레이 디렉토리
+              mkdir -p /opt/vllm-overlay
+              # gpt-oss 채널의 최신 vllm 휠 설치 (기존 것 위에 로컬 우선)
+              pip install --pre "vllm==0.10.1+gptoss" \
+                --extra-index-url https://wheels.vllm.ai/gpt-oss/ \
+                --extra-index-url https://download.pytorch.org/whl/nightly/cu128 \
+                --no-cache-dir \
+                --target /opt/vllm-overlay
+          volumeMounts:
+            - name: vllm-overlay
+              mountPath: /opt/vllm-overlay
+
       containers:
         - name: vllm
           image: vllm/vllm-openai:gptoss
+          imagePullPolicy: Always
           args:
             - --model
             - openai/gpt-oss-20b
@@ -25,8 +47,6 @@ spec:
             - "1"
             - --gpu-memory-utilization
             - "0.90"
-            # (--attention-backend 제거; env로 설정)
-            # (옵션) 모델 캐시 고정
             - --download-dir
             - /models
           ports:
@@ -36,15 +56,21 @@ spec:
               value: "SYS"
             - name: VLLM_LOGGING_LEVEL
               value: "INFO"
-            # ★ 핵심: FlashInfer 백엔드/샘플러 강제
+            # Blackwell(5090) 강제
             - name: VLLM_ATTENTION_BACKEND
               value: "FLASHINFER"
             - name: VLLM_USE_FLASHINFER_SAMPLER
               value: "1"
-            # (권장) 파이토치 메모리 조각화 완화
             - name: PYTORCH_CUDA_ALLOC_CONF
               value: "expandable_segments:True"
+            # 2) 오버레이된 휠을 우선 사용하게 경로 주입
+            - name: PYTHONPATH
+              value: "/opt/vllm-overlay:${PYTHONPATH}"
+            - name: PATH
+              value: "/opt/vllm-overlay/bin:${PATH}"
           volumeMounts:
+            - name: vllm-overlay
+              mountPath: /opt/vllm-overlay
             - name: hf-cache
               mountPath: /root/.cache/huggingface
             - name: models
@@ -52,8 +78,15 @@ spec:
           resources:
             limits:
               nvidia.com/gpu: 1
+
       volumes:
+        - name: vllm-overlay
+          emptyDir: {}   # initContainer가 설치한 휠을 메인 컨테이너와 공유
         - name: hf-cache
-          hostPath: { path: /home/gpt-oss/.cache/huggingface, type: DirectoryOrCreate }
+          hostPath:
+            path: /home/gpt-oss/.cache/huggingface
+            type: DirectoryOrCreate
         - name: models
-          hostPath: { path: /home/gpt-oss/models, type: DirectoryOrCreate }
+          hostPath:
+            path: /home/gpt-oss/models
+            type: DirectoryOrCreate
