--- a/.github/workflows/vllm-build.yml
+++ b/.github/workflows/vllm-build.yml
@@ -1,18 +1,24 @@
 name: vLLM Build and Push
+
 on:
   push:
-    paths: ['vllm/**']
     branches: [ main ]
+    paths: ['vllm/**']
+
+concurrency:
+  group: vllm-${{ github.ref }}
+  cancel-in-progress: true
 
 jobs:
   build:
-    # 셀프호스트면 runs-on: [self-hosted, linux, x64] 등으로 교체
-    runs-on: ubuntu-latest
+    runs-on: [self-hosted, linux, x64]   # ARC 러너 라벨에 맞춰 실행
     permissions:
       contents: write
       packages: write
+
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout
+        uses: actions/checkout@v4
 
       - name: Compute image name (lowercase)
         id: prep
@@ -21,6 +27,7 @@ jobs:
 
       - name: Get version
         id: version
+        shell: bash
         run: |
           VERSION=$(cat vllm/VERSION)
           echo "version=$VERSION" >> "$GITHUB_OUTPUT"
@@ -32,44 +39,43 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      # BuildKit GC 한도를 강하게 제한 (셀프호스트 DinD에서 특히 중요)
+      # BuildKit 버전 고정 + GC 상한 (형식: equals)
       - name: Set up Docker Buildx (with GC limits)
         uses: docker/setup-buildx-action@v3
         with:
           driver-opts: |
-            image=moby/buildkit:latest
-          buildkitd-flags: >-
-            --oci-worker-gc --oci-worker-gc-keepstorage 20GB
+            image=moby/buildkit:v0.13.2
+          buildkitd-flags: |
+            --oci-worker
+            --oci-worker-gc
+            --oci-worker-gc-keepstorage=20GB
             --debug=false
 
-      # (셀프호스트일 때만) 시작 전 강제 청소 - 호스티드는 생략 가능
-      - name: Pre-clean (self-hosted only)
-        if: startsWith(runner.name, 'self-hosted')
+      # 셀프호스트 시작 전/후 디스크 청소 (안전장치)
+      - name: Pre-clean (self-hosted)
         run: |
           docker buildx prune -af || true
           docker system prune -af --volumes || true
 
-      - name: Build and push Docker image (registry cache)
+      - name: Build and push (registry cache)
         uses: docker/build-push-action@v5
         with:
           context: ./vllm
           platforms: linux/amd64
-          push: true                 # 절대 load 하지 마라
+          push: true                       # 절대 --load 금지
           tags: |
             ${{ steps.prep.outputs.image }}:${{ steps.version.outputs.version }}-amd64
             ${{ steps.prep.outputs.image }}:latest
-          # 레지스트리 캐시로 전환 (GHCR)
           cache-from: type=registry,ref=${{ steps.prep.outputs.image }}:cache
           cache-to: type=registry,ref=${{ steps.prep.outputs.image }}:cache,mode=max
-          # 출력 메타데이터 축소로 디스크/네트워크 절약
           provenance: false
           sbom: false
-          # 빌드 인수로 캐시 최소화 (Dockerfile에서 참조 가능)
           build-args: |
             PIP_NO_CACHE_DIR=1
             UV_HTTP_TIMEOUT=600
 
       - name: Update manifest
+        shell: bash
         run: |
           sed -i "s|image: ghcr.io/.*/vllm:.*|image: ${{ steps.prep.outputs.image }}:${{ steps.version.outputs.version }}-amd64|g" manifests/vllm-20b/deployment.yaml
           git config --local user.email "action@github.com"
@@ -77,3 +83,15 @@ jobs:
           git add manifests/vllm-20b/deployment.yaml
           git commit -m "Update vllm image to ${{ steps.version.outputs.version }}" || exit 0
           git push
+
+      # 실패 시 buildkit 컨테이너 원인 즉시 확인
+      - name: Debug buildx/buildkit (on failure)
+        if: failure()
+        run: |
+          docker buildx ls || true
+          docker ps -a --filter name=buildx_buildkit || true
+          CID=$(docker ps -a --filter name=buildx_buildkit --format '{{.ID}}' | head -1) || true
+          if [ -n "$CID" ]; then
+            docker inspect "$CID" --format 'OOM={{.State.OOMKilled}} Exit={{.State.ExitCode}} Err={{.State.Error}}' || true
+            docker logs --tail=200 "$CID" || true
+          fi
