--- a/manifests/vllm-20b/deployment.yaml
+++ b/manifests/vllm-20b/deployment.yaml
@@ -13,7 +13,7 @@ spec:
 
       containers:
         - name: vllm
-          image: ghcr.io/cloud-linuxer/argocd-apps/vllm:0.1.0-amd64
+          image: localhost:5000/vllm:0.1.0-amd64
           imagePullPolicy: Always
           args:
             - --model
