--- a/manifests/vllm-20b/deployment.yaml
+++ b/manifests/vllm-20b/deployment.yaml
@@ -2,24 +2,28 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: vllm-gpt-oss-20b
+  labels:
+    app: vllm
 spec:
   replicas: 1
-  selector: { matchLabels: { app: vllm } }
+  selector:
+    matchLabels:
+      app: vllm
   template:
-    metadata: { labels: { app: vllm } }
+    metadata:
+      labels:
+        app: vllm
     spec:
       runtimeClassName: nvidia
       hostIPC: true
-
+      terminationGracePeriodSeconds: 120
       containers:
         - name: vllm
-          image: ghcr.io/cloud-linuxer/argocd-apps/vllm:0.1.0-amd64
+          image: vllm/vllm-openai:gptoss
           imagePullPolicy: Always
           args:
             - --model
             - openai/gpt-oss-20b
-            - --max-model-len
-            - "12090"
             - --dtype
             - bfloat16
             - --tensor-parallel-size
@@ -28,30 +32,56 @@ spec:
             - "0.90"
             - --download-dir
             - /models
+            - --served-model-name
+            - gpt-oss-20b
+            - --host
+            - 0.0.0.0
+            - --port
+            - "8000"
           ports:
-            - containerPort: 8000
+            - name: http
+              containerPort: 8000
           env:
             - name: NCCL_P2P_LEVEL
               value: "SYS"
             - name: VLLM_LOGGING_LEVEL
               value: "INFO"
-            # Blackwell(5090) 강제
-            - name: VLLM_USE_XFORMERS_SAMPLER
-              value: "1"
             - name: PYTORCH_CUDA_ALLOC_CONF
               value: "expandable_segments:True"
-            # V1 엔진 비활성화 (FlashAttention 3 불필요)
-            - name: VLLM_USE_V1
-              value: "0"
+            - name: HF_HOME
+              value: /root/.cache/huggingface
           volumeMounts:
             - name: hf-cache
               mountPath: /root/.cache/huggingface
             - name: models
               mountPath: /models
+            - name: dshm
+              mountPath: /dev/shm
           resources:
-            limits:
+            requests:
+              cpu: "2"
+              memory: "16Gi"
               nvidia.com/gpu: 1
-
+            limits:
+              cpu: "8"
+              memory: "48Gi"
+              nvidia.com/gpu: 1
+          readinessProbe:
+            httpGet:
+              path: /v1/models
+              port: 8000
+            initialDelaySeconds: 5
+            periodSeconds: 10
+            timeoutSeconds: 2
+            failureThreshold: 12
+          livenessProbe:
+            httpGet:
+              path: /v1/models
+              port: 8000
+            initialDelaySeconds: 60
+            periodSeconds: 20
+            timeoutSeconds: 2
+            failureThreshold: 6
       volumes:
         - name: hf-cache
           hostPath:
@@ -61,3 +91,7 @@ spec:
           hostPath:
             path: /home/gpt-oss/models
             type: DirectoryOrCreate
+        - name: dshm
+          emptyDir:
+            medium: Memory
+            sizeLimit: "4Gi"
