vllm-20b 배포 설정 업데이트: max-model-len을 8192로 변경하고, GPU 메모리 활용도를 0.95로 조정함. 추가 인자로 max-num-seqs, attention-backend, disable-custom-all-reduce를 설정하고, CUDA 관련 환경 변수를 추가함. 메모리 제한을 16Gi로 증가시킴.

--- a/manifests/vllm-20b/deployment.yaml
+++ b/manifests/vllm-20b/deployment.yaml
@@ -24,13 +24,18 @@ spec:
             - --model
             - openai/gpt-oss-20b
             - --max-model-len
-            - "8096"
+            - "8192"
             - --dtype
             - bfloat16
             - --tensor-parallel-size
             - "1"
             - --gpu-memory-utilization
-            - "0.90"
+            - "0.95"
+            - --max-num-seqs
+            - "512"
+            - --attention-backend
+            - FLASHINFER
+            - --disable-custom-all-reduce
             - --host
             - 0.0.0.0
             - --port
@@ -40,6 +45,12 @@ spec:
               value: /root/.cache/huggingface
             - name: VLLM_LOGGING_LEVEL
               value: INFO
+            - name: PYTORCH_CUDA_ALLOC_CONF
+              value: expandable_segments:True
+            - name: VLLM_ATTENTION_BACKEND
+              value: FLASHINFER
+            - name: CUDA_VISIBLE_DEVICES
+              value: "0"
           ports:
             - name: http
               containerPort: 8000
@@ -59,4 +70,4 @@ spec:
         - name: hf-cache
           hostPath: { path: /home/gpt-oss/.cache/huggingface, type: DirectoryOrCreate }
         - name: dshm
-          emptyDir: { medium: Memory, sizeLimit: 8Gi }
+          emptyDir: { medium: Memory, sizeLimit: 16Gi }
