--- a/manifests/vllm-20b/deployment.yaml
+++ b/manifests/vllm-20b/deployment.yaml
@@ -31,6 +31,7 @@ spec:
             - "1"
             - --gpu-memory-utilization
             - "0.90"
+            - --enforce-eager
             - --host
             - 0.0.0.0
             - --port
