--- a/manifests/vllm-20b/deployment.yaml
+++ b/manifests/vllm-20b/deployment.yaml
@@ -23,15 +23,9 @@ spec:
           args:
             - --model
             - openai/gpt-oss-20b
-            - --max-model-len
-            - "8192"
             - --dtype
             - bfloat16
-            - --tensor-parallel-size
-            - "1"
-            - --gpu-memory-utilization
-            - "0.90"
-            - --enforce-eager
+            - --disable-flash-attn
             - --host
             - 0.0.0.0
             - --port
