vllm-20b 배포 설정 수정: attention-backend을 FLASH_ATTN으로 변경하고, GPU 메모리 활용도를 0.85로 설정하며, max-model-len을 8192로 조정. 새로운 환경 변수 추가.

--- a/manifests/vllm-20b/deployment.yaml
+++ b/manifests/vllm-20b/deployment.yaml
@@ -25,7 +25,13 @@ spec:
             - openai/gpt-oss-20b
             - --dtype
             - bfloat16
-            - --disable-flash-attn
+            - --attention-backend
+            - FLASH_ATTN
+            - --enforce-eager
+            - --gpu-memory-utilization
+            - "0.85"
+            - --max-model-len
+            - "8192"
             - --host
             - 0.0.0.0
             - --port
@@ -35,6 +41,12 @@ spec:
               value: /root/.cache/huggingface
             - name: VLLM_LOGGING_LEVEL
               value: INFO
+            - name: VLLM_ATTENTION_BACKEND
+              value: FLASH_ATTN
+            - name: VLLM_FLASHINFER_FORCE_ENABLE
+              value: "1"
+            - name: FLASH_ATTENTION_FORCE_VERSION
+              value: "3"
           ports:
             - name: http
               containerPort: 8000
