vllm-20b 배포 설정 수정: 새로운 환경 변수 VLLM_USE_V1과 VLLM_ATTENTION_BACKEND를 추가하고, FLASH_ATTENTION_VERSION을 제거하여 설정을 최적화함.

--- a/manifests/vllm-20b/deployment.yaml
+++ b/manifests/vllm-20b/deployment.yaml
@@ -39,10 +39,12 @@ spec:
               value: /root/.cache/huggingface
             - name: VLLM_LOGGING_LEVEL
               value: INFO
+            - name: VLLM_USE_V1
+              value: "0"
+            - name: VLLM_ATTENTION_BACKEND
+              value: XFORMERS
             - name: VLLM_USE_TRITON_FLASH_ATTN
               value: "0"
-            - name: FLASH_ATTENTION_VERSION
-              value: "3"
           ports:
             - name: http
               containerPort: 8000
