vllm-20b 배포 설정 수정: VLLM_DISABLE_SINKS 환경 변수를 추가하고, VLLM_ATTENTION_BACKEND를 TORCH_SDPA로 설정하여 주의 백엔드를 변경함.

--- a/manifests/vllm-20b/deployment.yaml
+++ b/manifests/vllm-20b/deployment.yaml
@@ -41,6 +41,10 @@ spec:
               value: INFO
             - name: VLLM_USE_V1
               value: "0"
+            - name: VLLM_DISABLE_SINKS
+              value: "1"
+            - name: VLLM_ATTENTION_BACKEND
+              value: TORCH_SDPA
           ports:
             - name: http
               containerPort: 8000
