--- a/applications/vllm-20b.yaml
+++ b/applications/vllm-20b.yaml
@@ -1,18 +1,18 @@
-# apiVersion: argoproj.io/v1alpha1
-# kind: Application
-# metadata:
-#   name: vllm-20b
-#   namespace: argocd
-# spec:
-#   project: default
-#   source:
-#     repoURL: https://github.com/Cloud-Linuxer/argocd-apps.git
-#     targetRevision: HEAD
-#     path: manifests/vllm-20b
-#   destination:
-#     server: https://kubernetes.default.svc
-#     namespace: default
-#   syncPolicy:
-#     automated:
-#       prune: true
-#       selfHeal: true
+apiVersion: argoproj.io/v1alpha1
+kind: Application
+metadata:
+  name: vllm-20b
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/Cloud-Linuxer/argocd-apps.git
+    targetRevision: HEAD
+    path: manifests/vllm-20b
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: default
+  syncPolicy:
+    automated:
+      prune: true
+      selfHeal: true
